--- a/src/index.html
+++ b/src/index.html
@@ -53,11 +53,11 @@
               <a
                 rel="noopener"
                 target="_blank"
-                href="https://www.behance.net/walaura"
+                href="https://www.artstation.com/walaura"
                 title="Opens in a new window"
               >
-                <span>Photos</span>
-                <strong>Behance</strong>
+                <span>Art</span>
+                <strong>ArtStation</strong>
               </a>
             </li>
 
@@ -70,6 +70,18 @@
               >
                 <span>Sticker shop</span>
                 <strong>Redbubble</strong>
+              </a>
+            </li>
+
+            <li>
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://www.behance.net/walaura"
+                title="Opens in a new window"
+              >
+                <span>Photos</span>
+                <strong>Behance</strong>
               </a>
             </li>
 
