--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,19 @@
               <a
                 rel="noopener"
                 target="_blank"
+                href="https://walaura.itch.io"
+                title="Opens in a new window"
+              >
+                <span>Games & assets</span>
+                <strong>Itch.io</strong>
+              </a>
+            </li>
+
+            <li>
+
+              <a
+                rel="noopener"
+                target="_blank"
                 href="https://www.behance.net/walaura"
                 title="Opens in a new window"
               >
@@ -106,18 +119,6 @@
               >
                 <span>Writing</span>
                 <strong>Dev.to</strong>
-              </a>
-            </li>
-
-            <li>
-              <a
-                rel="noopener"
-                target="_blank"
-                href="https://walaura.itch.io"
-                title="Opens in a new window"
-              >
-                <span>Games</span>
-                <strong>Itch.io</strong>
               </a>
             </li>
           </ul>
